--- a/mysite/app/templates/base.html
+++ b/mysite/app/templates/base.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- css path -->
-    <link rel="stylesheet" type="text/css" href="{% static 'app/css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'app/css/index.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'app/css/see_more.css'%}"></link>
     <link rel="stylesheet" type="text/css" href="{% static 'app/css/weather.css'%}"></link>
 
